--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
+# Project files
+data/
+
 # Mac files
 .DS_Store
 
 # Pycharm
-.idea/*
+.idea/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
-__pycache__
 *.py[cod]
 *$py.class
 
